[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-dps"
version = "0.1.0"
description = "Vision-based DPS meter baseline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Keep in sync with requirements.txt or delete requirements.txt and manage here.
]

[tool.setuptools.packages.find]
where = ["src"]